homework2/error.log
  File "stat.py", line 2
    :
    ^
SyntaxError: invalid syntax
